--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,15 @@ dnspython==2.5.0
 fastapi==0.109.0
 h11==0.14.0
 idna==3.6
+numpy==1.26.4
+pandas==2.2.2
 pydantic==2.5.3
 pydantic_core==2.14.6
 pymongo==4.6.1
+scikit-learn==1.5.0
+scipy==1.13.1
 sniffio==1.3.0
 starlette==0.35.1
 typing_extensions==4.9.0
 uvicorn==0.27.0
+
